--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_JDJJBG_ESJD.cshtml
@@ -25,7 +25,7 @@
                     <img class="img_radio" id="img_gq_sjhs" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divSFTip" class="Warn" style="z-index: 996;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
         <div id="divESJDLB" class="div_row" style="z-index: 998">
             <div class="div_row_left font_two">
@@ -53,7 +53,7 @@
             <div id="divESJDLBTip" class="Warn" style="z-index: 997;"></div>
         </div>
         <div id="divDSXXCS" class="div_row" style="z-index: 996; display: none;">
-            <div class="div_row_left">
+            <div class="div_row_left" style="margin-left: 129px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div id="divXYJXXCS" class="div_row" style="z-index: 995; display: none;">
-            <div class="div_row_left">
+            <div class="div_row_left" style="margin-left: 129px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div id="divKTXXCS" class="div_row" style="z-index: 994; display: none;">
-            <div class="div_row_left">
+            <div class="div_row_left" style="margin-left: 129px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div id="divBXXXCS" class="div_row" style="z-index: 993; display: none;">
-            <div class="div_row_left">
+            <div class="div_row_left" style="margin-left: 129px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div id="divBGXXCS" class="div_row" style="z-index: 992; display: none;">
-            <div class="div_row_left">
+            <div class="div_row_left" style="margin-left: 129px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ"></span>
             </div>
@@ -162,7 +162,7 @@
                 <span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
-                <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
+                <div id="divXJText" class="div_select_out SRK">
                     <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
                         <div class="span_select_arrow"></div>
@@ -186,13 +186,22 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 988;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 987;">
+        <div id="divPSFS" class="div_row" style="z-index: 987; height: 280px;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanPSFS">配送方式</span>
+            </div>
+            <div id="divPSFSText" class="div_row_right">
+            </div>
+            <div id="divPSFSTip" class="Warn" style="z-index: 986;"></div>
+        </div>
+        <div id="divSZQY" class="div_row" style="z-index: 985;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK" style="z-index: 986;">
+                <div id="divQYText" class="div_select_out SRK">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -201,7 +210,7 @@
                     <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK" style="z-index: 985;">
+                <div id="divDDText" class="div_select_out SRK">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
@@ -209,8 +218,9 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 984;"></div>
+            <div id="divSZQYTip" class="Warn"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
