--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_YSPSCP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_WHYL_YSPSCP.cshtml
@@ -65,6 +65,15 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
         </div>
+        <div id="divPSFS" class="div_row" style="z-index: 995; height: 280px;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanPSFS">配送方式</span>
+            </div>
+            <div id="divPSFSText" class="div_row_right">
+            </div>
+            <div id="divPSFSTip" class="Warn" style="z-index: 994;"></div>
+        </div>
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
@@ -73,7 +82,7 @@
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input type="hidden" id="QYCode"/>
+                        <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                         <div class="span_select_arrow"></div>
                     </div>
@@ -88,8 +97,9 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 989;"></div>
+            <div id="divSZQYTip" class="Warn"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
