--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_PWKQ_MPKQ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_PWKQ_MPKQ.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divMPKQLB" class="div_row" style="z-index: 999">
+        <div id="divMPKQLB" class="div_row" style="z-index: 998">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
@@ -45,7 +45,16 @@
                     </div>
                 </div>
             </div>
-            <div id="divMPKQLBTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divMPKQLBTip" class="Warn" style="z-index: 997;"></div>
+        </div>
+        <div id="divXL" class="div_row" style="z-index: 996; display: none;">
+            <div class="div_row_left font_two">
+                <span class="span_required">&nbsp;</span>
+                <span id="spanXL">小类</span>
+            </div>
+            <div id="divXLText" class="div_row_right">
+            </div>
+            <div id="divXLTip" class="Warn" style="z-index: 995;"></div>
         </div>
         <div class="div_split" style="display: block; text-align: left">
             <span class="span_split">基本信息</span>
@@ -59,7 +68,7 @@
             <div class="div_row_right">
                 <input id="YXQZ" column="YXQZ" readonly="readonly" class="input_input SRK" type="text" style="width: 305px" />
             </div>
-            <div id="divYXQZTip" class="Warn" style="z-index: 999;"></div>
+            <div id="divYXQZTip" class="Warn" style="z-index: 993;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left font_two">
@@ -72,15 +81,24 @@
                     <span class="spaninput_fontcolor">元/张</span>
                 </span>
             </div>
-            <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
+            <div id="divJGTip" class="Warn" style="z-index: 991;"></div>
         </div>
-        <div id="divSZQY" class="div_row" style="z-index: 991;">
+        <div id="divPSFS" class="div_row" style="z-index: 990; height: 280px;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanPSFS">配送方式</span>
+            </div>
+            <div id="divPSFSText" class="div_row_right">
+            </div>
+            <div id="divPSFSTip" class="Warn" style="z-index: 989;"></div>
+        </div>
+        <div id="divSZQY" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
+                <div id="divQYText" class="div_select_out SRK">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -89,7 +107,7 @@
                     <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK" style="z-index: 990;">
+                <div id="divDDText" class="div_select_out SRK">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
@@ -97,8 +115,9 @@
                     <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 989;"></div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 987"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
@@ -114,7 +133,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 988;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 986;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">详情描述</span>
