--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
@@ -22,39 +22,26 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 999">
-            <div class="div_row_left font_four">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">职位类别</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择职位类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-            </div>
-            <div id="divOUTLBTip" class="Warn"></div>
-        </div>
-        <div id="divOUTXL" class="div_row" style="z-index: 998">
-            <div class="div_row_left font_four">
+        <div id="divZWMC" class="div_row" style="z-index: 998">
+            <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">职位名称</span>
             </div>
             <div class="div_row_right">
-                <div id="divXLText" class="div_select_out SRK">
-                    <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择职位名称</span>
+                <div id="divZWMCText" class="div_select_out SRK" style="position: relative; z-index: 997; width: 325px;">
+                    <div id="divZWMCSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 325px;">
+                        <span id="spanZWMC" class="span_select spaninput_fontcolor" style="margin-top: 0; width: 295px;">请选择职位名称</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divXL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                </div>
+                <div class="div_row_right_jcpp">
+                    <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
+                    </div>
+                    <div id="div_row_right_jcpp_second" class="div_row_right_jcpp_item div_row_right_jcpp_second">
                     </div>
                 </div>
             </div>
-            <div id="divOUTXLTip" class="Warn"></div>
+            <div id="divZWMCTip" class="Warn" style="z-index: 995;"></div>
         </div>
         <div id="divZPRS" class="div_row" style="margin-top: 22px; z-index: 997;">
             <div class="div_row_left">
