--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZPCX/QZZPCX_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZPCX/QZZPCX_JZZP.cshtml
@@ -21,8 +21,6 @@
     <div id="divBody" class="div_body">
         <ul class="ul_body_head">
             <li id="li_body_head_first" class="li_body_head"></li>
-            <li class="li_body_head">个人</li>
-            <li class="li_body_head">商家</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
             <ul id="ul_body_left" class="ul_body_left"></ul>
@@ -32,8 +30,8 @@
             </div>
         </div>
         <div class="div_body_right">
-            <p class="p_div_body_right">小镇精选</p>
-            <ul id="ul_body_right" class="ul_body_right"></ul>
+            @*<p class="p_div_body_right">小镇精选</p>
+            <ul id="ul_body_right" class="ul_body_right"></ul>*@
         </div>
     </div>
 }
