--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_DJZM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_DJZM.cshtml
@@ -33,7 +33,7 @@
         </div>
         <div id="divFWFW" class="div_row" style="z-index: 984;">
             <div class="div_row_left">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span id="spanFWFW">服务范围</span>
             </div>
             <div id="divFWFWText" class="div_row_right">
