--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_JYPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_JYPX.cshtml
@@ -68,7 +68,7 @@
             </div>
             <div id="divPPMCTip"></div>
         </div>
-        <div id="divJYPXTZJETZJE" class="div_row" style="z-index: 993;">
+        <div id="divJYPXTZJE" class="div_row" style="z-index: 993;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">投资金额</span>
