--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HCZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HCZL.cshtml
@@ -64,21 +64,21 @@
             </div>
             <div id="divHCZLTCPPTip" style="z-index: 996;"></div>
         </div>
-        <div id="divTCYS" class="div_row" style="z-index: 997">
+        <div id="divTCYS" class="div_row" style="z-index: 994">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">头车颜色</span>
+                <span class="spanFWCZ">车辆颜色</span>
             </div>
             <div class="div_row_right" id="div_tcys_right">
             </div>
         </div>
-        <div id="divTCYS2" class="div_row" style="z-index: 996">
+        <div id="divTCYS2" class="div_row" style="z-index: 993">
             <div class="div_row_left" style="margin-left: 145px;">
                 <span class="spanFWCZ">&nbsp;</span>
             </div>
             <div class="div_row_right" id="div_tcys_right2">
             </div>
-            <div id="divTCYSTip"></div>
+            <div id="divTCYSTip" class="Warn" style="z-index: 992;"></div>
         </div>
         <div id="divGCSL" class="div_row" style="z-index: 995;">
             <div class="div_row_left">
@@ -120,21 +120,21 @@
             </div>
             <div id="divHCZLGCPPTip" style="z-index: 993"></div>
         </div>
-        <div id="divGCYS" class="div_row" style="z-index: 993">
+        <div id="divGCYS" class="div_row" style="z-index: 994">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">跟车颜色</span>
+                <span class="spanFWCZ">车辆颜色</span>
             </div>
             <div class="div_row_right" id="div_gcys_right">
             </div>
         </div>
-        <div id="divGCYS2" class="div_row" style="z-index: 992">
+        <div id="divGCYS2" class="div_row" style="z-index: 993">
             <div class="div_row_left" style="margin-left: 145px;">
                 <span class="spanFWCZ">&nbsp;</span>
             </div>
             <div class="div_row_right" id="div_gcys_right2">
             </div>
-            <div id="divGCYSTip"></div>
+            <div id="divGCYSTip" class="Warn" style="z-index: 992;"></div>
         </div>
         <div id="divMFTGCH" class="div_row">
             <div class="div_row_left font_six">
